# openpanel-rust-sdk

./: .env_sample  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/sdk/: mod.rs  user.rs
tests/: global_properties.rs  identify_user.rs  tracking.rs
